jumpscare fixed

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ select{
     background: white;
 }
 
+.spooky{
+    background-color: white;
+}
+
 #credits{
     text-align: center;
 }
